# AutoForge-Lab

./: .gitignore  ARCHITECTURE.md  CODE_QUALITY_CHECKLIST.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  noxfile.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/analytics/: pandas_reports.py
backend/app/api/: router.py
backend/app/api/routes/: crawl.py  router.py
backend/app/core/: config.py  logging.py
backend/app/crawling/: collector.py  playwright_collector.py  robots.py  selenium_collector.py  throttle.py
backend/app/db/: init_db.py
backend/app/extractors/: arxiv.py  base.py  hackernews.py  wikipedia.py
backend/app/middleware/: request_logging.py
backend/app/models/: crawl.py
backend/app/repositories/: crawl_repo.py
backend/app/scheduler/: jobs.py  runner.py
backend/app/schemas/: crawl.py
backend/app/services/: crawl_pipeline.py
backend/tests/: test_api.py  test_crawl_validation.py  test_health.py  test_pipeline.py  test_robots_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.css  App.tsx  api.ts
scripts/: down.sh  format.sh  lint.sh  logs-api.sh  logs-worker.sh  logs.sh  preflight.sh  smoke.sh  test.sh  types.sh  up.sh
