[project]
name = "autoforge-lab-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "apscheduler",
  "httpx",
  "beautifulsoup4",
  "lxml",
  "pandas",
]

[project.optional-dependencies]
browser = [
  "playwright",
  "selenium",
]

dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"